echoserver/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
      name: echoserver
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: echoserver
          # image: gcr.io/google-containers/echoserver:1.10 #8443
          image: k8s.gcr.io/echoserver:1.10 #--port=8080
          ports:
            - containerPort: 8080
            # - containerPort: 8443
              #readinessProbe:
              # httpGet:
              #   path: /healthCheck
              #   port: 80
