echoserver/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8443
    - name: https
      port: 8080
      targetPort: 8080
  selector:
    app: echoserver
  # type: NodePort
  type: LoadBalancer
  externalTrafficPolicy: Local
  # loadBalancerIP: "34.97.131.18"
