echoserver/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: "dengge-ip" #34.97.131.18
    kubernetes.io/ingress.global-static-ip-name: "dengge-ip-global" #35.244.158.145
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: echoserver

spec:
  rules:
  - http:
    # host: dengge.xyz
      paths: 
      - path: /*
        backend:
          serviceName: echoserver
          # servicePort: 80
          servicePort: 8080
      - path: /aaa/*
        backend:
          serviceName: echoserver
          servicePort: 80
  # tls:
  # - hosts:
  #   - dengge.xyz
  #   secretName: dengge-tls
