echoserver/k8s/ingress_nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.global-static-ip-name: dengge-ip
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: hello-app
          servicePort: 80


#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: echoserver
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: dengge-ip
#    kubernetes.io/ingress.class: nginx
#  labels:
#    app: echoserver
#
#spec:
#  rules:
#  - host: dengge.xyz
#    http:
#      paths: 
#      - path: /echo/*
#        backend:
#          serviceName: echoserver
#          servicePort: 80
#          # servicePort: 8443
#      - path: /aaa/*
#        backend:
#          serviceName: aaa
#          servicePort: 80
#      - path: /ccc/*
#        backend:
#          serviceName: ccc
#          servicePort: 8080
#  # tls:
#  # - hosts:
#  #   - dengge.xyz
#  #   secretName: dengge-tls
